--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <p>hello</p>
   <script src="logic.js"></script>
     </body>
 </html>
